task4-app/frontend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  namespace: task4-app
spec:
  replicas: 4

  revisionHistoryLimit: 10

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: frontend
          image: ghcr.io/abdelrahman679/t4-frontend:11

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 500Mi

  strategy:
    canary:
      stableService: frontend-stable
      canaryService: frontend-canary

      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: frontend 
      steps:
        - setWeight: 10
        - pause: { duration: 120s }
        - setWeight: 25
        - pause: {duration: 90s}
        - setWeight: 50
        - pause: {duration: 60s}
        - setWeight: 100
