task4-app/frontend/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: task4-app
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
