task4-app/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: task4-app
spec:
  parentRefs:
    - name: eg-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-stable
          port: 3000
          weight: 100
        - name: frontend-canary
          port: 3000
           weight: 0
